[gd_scene load_steps=9 format=3 uid="uid://b2no0cj3pyx2n"]

[ext_resource type="Texture2D" uid="uid://tf778l0s6w1i" path="res://Menu/Main Menu.png" id="1_ci1se"]
[ext_resource type="Script" uid="uid://v48ca0faxqfr" path="res://Menu/main_menu.gd" id="1_dtkyu"]
[ext_resource type="FontFile" uid="uid://1c6sgc7k0jgc" path="res://Menu/pixel.ttf" id="2_dtkyu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ohgnh"]
texture = ExtResource("1_ci1se")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fw3rq"]
bg_color = Color(0.7919991, 0.79199916, 0.7919991, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.38039216, 0.21568628, 0.12156863, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ci1se"]
bg_color = Color(0.95815796, 0.9581563, 0.95815665, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.38039216, 0.21568628, 0.12156863, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtkyu"]
bg_color = Color(0.95686275, 0.95686275, 0.95686275, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.38039216, 0.21568628, 0.12156863, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ohgnh"]
bg_color = Color(0.95686275, 0.95686275, 0.95686275, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.38039216, 0.21568628, 0.12156863, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dtkyu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ohgnh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -296.0
offset_right = 175.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 12

[node name="start-button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.5890956, 0.5890956, 0.5890956, 1)
theme_override_fonts/font = ExtResource("2_dtkyu")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_fw3rq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fw3rq")
theme_override_styles/hover = SubResource("StyleBoxFlat_ci1se")
toggle_mode = true
text = "START"

[node name="settings-button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.5882353, 0.5882353, 0.5882353, 1)
theme_override_fonts/font = ExtResource("2_dtkyu")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_fw3rq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fw3rq")
theme_override_styles/hover = SubResource("StyleBoxFlat_dtkyu")
toggle_mode = true
text = "SETTINGS"

[node name="exit-button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.5882353, 0.5882353, 0.5882353, 1)
theme_override_fonts/font = ExtResource("2_dtkyu")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_fw3rq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fw3rq")
theme_override_styles/hover = SubResource("StyleBoxFlat_ohgnh")
toggle_mode = true
text = "EXIT"

[connection signal="pressed" from="VBoxContainer/start-button" to="." method="_on_startbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/settings-button" to="." method="_on_settingsbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/exit-button" to="." method="_on_exitbutton_pressed"]
